feat: 결제 운영 백오피스 신뢰성 고도화
- 승인/취소 멱등성, 결과불명 복구 작업, SALE/CANCEL 매출 원장 흐름 보강
- RecoveryTask, 외부전송, 알림톡 Queue, 정산/매출 원장 화면과 API 추가
- ErrorCode/requestId/fieldErrors 기반 예외 응답 정리
- README와 포트폴리오/운영 문서를 한국어로 정리하고 Mermaid 흐름도 추가
- retryQuery 승인 복구 성공 및 중복 방지 테스트 보강